{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 589,
  "lineage": "ace7fb35-b23d-63f0-58c4-3855c73fabb9",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_network_interface",
      "name": "created_nva_windows_vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkInterfaces/NVA-Windows-VM-nic",
            "ip_configuration": [
              {
                "name": "NVA-Windows-VM-nic0",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/virtualNetworks/HUB/subnets/subnet1"
              }
            ],
            "location": "westeurope",
            "mac_address": "60-45-BD-8C-02-DC",
            "name": "NVA-Windows-VM-nic",
            "network_security_group_id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkSecurityGroups/hub-nsg",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "WAN-HUB-and-SPOKE",
            "tags": {
              "ManagedBy": "Terraform"
            },
            "virtual_machine_id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Compute/virtualMachines/NVA-Windows-VM"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "hub_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/loadBalancers/Hub-Public-LoadBalancer/frontendIPConfigurations/PublicIPAddress",
                "inbound_nat_rules": [
                  "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/loadBalancers/Hub-Public-LoadBalancer/inboundNatRules/RDPAccess"
                ],
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/publicIPAddresses/PublicIPForHUBLB"
              }
            ],
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/loadBalancers/Hub-Public-LoadBalancer",
            "location": "westeurope",
            "name": "Hub-Public-LoadBalancer",
            "resource_group_name": "WAN-HUB-and-SPOKE",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ManagedBy": "Terraform"
            }
          },
          "dependencies": [
            "azurerm_public_ip.lb",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkInterfaces/NVA-Windows-VM-nic/ipConfigurations/NVA-Windows-VM-nic0"
            ],
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/loadBalancers/Hub-Public-LoadBalancer/backendAddressPools/BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/loadBalancers/Hub-Public-LoadBalancer",
            "name": "BackEndAddressPool"
          },
          "dependencies": [
            "azurerm_lb.hub_lb",
            "azurerm_public_ip.lb",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_nat_rule",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configuration_id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkInterfaces/NVA-Windows-VM-nic/ipConfigurations/NVA-Windows-VM-nic0",
            "backend_port": 3389,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/loadBalancers/Hub-Public-LoadBalancer/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 3389,
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/loadBalancers/Hub-Public-LoadBalancer/inboundNatRules/RDPAccess",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/loadBalancers/Hub-Public-LoadBalancer",
            "name": "RDPAccess",
            "protocol": "Tcp",
            "resource_group_name": "WAN-HUB-and-SPOKE"
          },
          "dependencies": [
            "azurerm_lb.hub_lb",
            "azurerm_public_ip.lb",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "lb_nva_windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/loadBalancers/Hub-Public-LoadBalancer/backendAddressPools/BackEndAddressPool",
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkInterfaces/NVA-Windows-VM-nic/ipConfigurations/NVA-Windows-VM-nic0|/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/loadBalancers/Hub-Public-LoadBalancer/backendAddressPools/BackEndAddressPool",
            "ip_configuration_name": "NVA-Windows-VM-nic0",
            "network_interface_id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkInterfaces/NVA-Windows-VM-nic"
          },
          "dependencies": [
            "azurerm_lb.hub_lb",
            "azurerm_lb_backend_address_pool.lb",
            "azurerm_public_ip.lb",
            "azurerm_resource_group.main",
            "data.azurerm_network_interface.created_nva_windows_vm_nic",
            "module.hub.azurerm_network_security_group.this",
            "module.hub.azurerm_network_security_rule.icmp_rule",
            "module.hub.azurerm_network_security_rule.rdp_rule",
            "module.hub.azurerm_network_security_rule.ssh_rule",
            "module.hub.azurerm_virtual_network.this",
            "module.nva_windows_vm.azurerm_linux_virtual_machine.vm_linux",
            "module.nva_windows_vm.azurerm_managed_disk.disk",
            "module.nva_windows_vm.azurerm_network_interface.vm",
            "module.nva_windows_vm.azurerm_storage_account.boot_diagnostics",
            "module.nva_windows_vm.azurerm_virtual_machine_data_disk_attachment.attachment",
            "module.nva_windows_vm.azurerm_virtual_machine_extension.extensions",
            "module.nva_windows_vm.azurerm_windows_virtual_machine.vm_windows",
            "module.nva_windows_vm.random_id.vm_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_nat_rule_association",
      "name": "lb_nva_windows_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkInterfaces/NVA-Windows-VM-nic/ipConfigurations/NVA-Windows-VM-nic0|/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/loadBalancers/Hub-Public-LoadBalancer/inboundNatRules/RDPAccess",
            "ip_configuration_name": "NVA-Windows-VM-nic0",
            "nat_rule_id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/loadBalancers/Hub-Public-LoadBalancer/inboundNatRules/RDPAccess",
            "network_interface_id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkInterfaces/NVA-Windows-VM-nic"
          },
          "dependencies": [
            "azurerm_lb.hub_lb",
            "azurerm_lb_nat_rule.lb",
            "azurerm_public_ip.lb",
            "azurerm_resource_group.main",
            "data.azurerm_network_interface.created_nva_windows_vm_nic",
            "module.hub.azurerm_network_security_group.this",
            "module.hub.azurerm_network_security_rule.icmp_rule",
            "module.hub.azurerm_network_security_rule.rdp_rule",
            "module.hub.azurerm_network_security_rule.ssh_rule",
            "module.hub.azurerm_virtual_network.this",
            "module.nva_windows_vm.azurerm_linux_virtual_machine.vm_linux",
            "module.nva_windows_vm.azurerm_managed_disk.disk",
            "module.nva_windows_vm.azurerm_network_interface.vm",
            "module.nva_windows_vm.azurerm_storage_account.boot_diagnostics",
            "module.nva_windows_vm.azurerm_virtual_machine_data_disk_attachment.attachment",
            "module.nva_windows_vm.azurerm_virtual_machine_extension.extensions",
            "module.nva_windows_vm.azurerm_windows_virtual_machine.vm_windows",
            "module.nva_windows_vm.random_id.vm_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "compromised_linux_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkInterfaces/Compromised-Linux-VM-nic|/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkSecurityGroups/spoke_2-nsg",
            "network_interface_id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkInterfaces/Compromised-Linux-VM-nic",
            "network_security_group_id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkSecurityGroups/spoke_2-nsg"
          },
          "dependencies": [
            "azurerm_public_ip.compromised_linux_vm",
            "azurerm_resource_group.main",
            "module.compromised_linux_vm.azurerm_network_interface.vm",
            "module.spoke_2.azurerm_network_security_group.this",
            "module.spoke_2.azurerm_network_security_rule.icmp_rule",
            "module.spoke_2.azurerm_network_security_rule.rdp_rule",
            "module.spoke_2.azurerm_network_security_rule.ssh_rule",
            "module.spoke_2.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nva_windows_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkInterfaces/NVA-Windows-VM-nic|/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkSecurityGroups/hub-nsg",
            "network_interface_id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkInterfaces/NVA-Windows-VM-nic",
            "network_security_group_id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkSecurityGroups/hub-nsg"
          },
          "dependencies": [
            "azurerm_public_ip.lb",
            "azurerm_resource_group.main",
            "module.hub.azurerm_network_security_group.this",
            "module.hub.azurerm_network_security_rule.icmp_rule",
            "module.hub.azurerm_network_security_rule.rdp_rule",
            "module.hub.azurerm_network_security_rule.ssh_rule",
            "module.hub.azurerm_virtual_network.this",
            "module.nva_windows_vm.azurerm_network_interface.vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "vulnerable_windows_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkInterfaces/Vuln-Win2008-VM-nic|/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkSecurityGroups/spoke_1-nsg",
            "network_interface_id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkInterfaces/Vuln-Win2008-VM-nic",
            "network_security_group_id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkSecurityGroups/spoke_1-nsg"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.spoke_1.azurerm_network_security_group.this",
            "module.spoke_1.azurerm_network_security_rule.icmp_rule",
            "module.spoke_1.azurerm_network_security_rule.rdp_rule",
            "module.spoke_1.azurerm_network_security_rule.ssh_rule",
            "module.spoke_1.azurerm_virtual_network.this",
            "module.vulnerable_windows_vm.azurerm_network_interface.vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "compromised_linux_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/publicIPAddresses/PublicIPforLinux",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.137.54.178",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "PublicIPforLinux",
            "resource_group_name": "WAN-HUB-and-SPOKE",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "ManagedBy": "Terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/publicIPAddresses/PublicIPForHUBLB",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.144.162.200",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "PublicIPForHUBLB",
            "resource_group_name": "WAN-HUB-and-SPOKE",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ManagedBy": "Terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "hub_to_spoke_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/virtualNetworks/HUB/virtualNetworkPeerings/hub_to_spoke_1",
            "name": "hub_to_spoke_1",
            "remote_virtual_network_id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/virtualNetworks/SPOKE_1",
            "resource_group_name": "WAN-HUB-and-SPOKE",
            "use_remote_gateways": false,
            "virtual_network_name": "HUB"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.hub.azurerm_network_security_group.this",
            "module.hub.azurerm_virtual_network.this",
            "module.spoke_1.azurerm_network_security_group.this",
            "module.spoke_1.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "hub_to_spoke_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/virtualNetworks/HUB/virtualNetworkPeerings/hub_to_spoke_2",
            "name": "hub_to_spoke_2",
            "remote_virtual_network_id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/virtualNetworks/SPOKE_2",
            "resource_group_name": "WAN-HUB-and-SPOKE",
            "use_remote_gateways": false,
            "virtual_network_name": "HUB"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.hub.azurerm_network_security_group.this",
            "module.hub.azurerm_virtual_network.this",
            "module.spoke_2.azurerm_network_security_group.this",
            "module.spoke_2.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "spoke_1_to_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/virtualNetworks/SPOKE_1/virtualNetworkPeerings/spoke_1_to_hub",
            "name": "spoke_1_to_hub",
            "remote_virtual_network_id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/virtualNetworks/HUB",
            "resource_group_name": "WAN-HUB-and-SPOKE",
            "use_remote_gateways": false,
            "virtual_network_name": "SPOKE_1"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.hub.azurerm_network_security_group.this",
            "module.hub.azurerm_virtual_network.this",
            "module.spoke_1.azurerm_network_security_group.this",
            "module.spoke_1.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "spoke_2_to_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/virtualNetworks/SPOKE_2/virtualNetworkPeerings/spoke_2_to_hub",
            "name": "spoke_2_to_hub",
            "remote_virtual_network_id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/virtualNetworks/HUB",
            "resource_group_name": "WAN-HUB-and-SPOKE",
            "use_remote_gateways": false,
            "virtual_network_name": "SPOKE_2"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.hub.azurerm_network_security_group.this",
            "module.hub.azurerm_virtual_network.this",
            "module.spoke_2.azurerm_network_security_group.this",
            "module.spoke_2.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.compromised_linux_vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkInterfaces/Compromised-Linux-VM-nic",
            "internal_domain_name_suffix": "lqobd3rj3woevm1hd5dmclnith.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Compromised-Linux-VM-nic0",
                "primary": true,
                "private_ip_address": "10.2.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/publicIPAddresses/PublicIPforLinux",
                "subnet_id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/virtualNetworks/SPOKE_2/subnets/subnet1"
              }
            ],
            "location": "westeurope",
            "name": "Compromised-Linux-VM-nic",
            "private_ip_address": "10.2.0.4",
            "private_ip_addresses": [
              "10.2.0.4"
            ],
            "resource_group_name": "WAN-HUB-and-SPOKE",
            "tags": {
              "ManagedBy": "Terraform"
            }
          },
          "dependencies": [
            "azurerm_public_ip.compromised_linux_vm",
            "azurerm_resource_group.main",
            "module.spoke_2.azurerm_network_security_group.this",
            "module.spoke_2.azurerm_network_security_rule.icmp_rule",
            "module.spoke_2.azurerm_network_security_rule.rdp_rule",
            "module.spoke_2.azurerm_network_security_rule.ssh_rule",
            "module.spoke_2.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.hub",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkSecurityGroups/hub-nsg",
            "location": "westeurope",
            "name": "hub-nsg",
            "resource_group_name": "WAN-HUB-and-SPOKE",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowICMP",
                "priority": 120,
                "protocol": "Icmp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "165.225.194.94",
                  "89.23.224.8"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "89.23.224.8",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.hub",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "icmp_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkSecurityGroups/hub-nsg/securityRules/AllowICMP",
            "name": "AllowICMP",
            "network_security_group_name": "hub-nsg",
            "priority": 120,
            "protocol": "Icmp",
            "resource_group_name": "WAN-HUB-and-SPOKE",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main",
            "module.hub.azurerm_network_security_group.this",
            "module.hub.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.hub",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rdp_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkSecurityGroups/hub-nsg/securityRules/AllowRDP",
            "name": "AllowRDP",
            "network_security_group_name": "hub-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "WAN-HUB-and-SPOKE",
            "source_address_prefix": "89.23.224.8",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main",
            "module.hub.azurerm_network_security_group.this",
            "module.hub.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.hub",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkSecurityGroups/hub-nsg/securityRules/AllowSSH",
            "name": "AllowSSH",
            "network_security_group_name": "hub-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "WAN-HUB-and-SPOKE",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "165.225.194.94",
              "89.23.224.8"
            ],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main",
            "module.hub.azurerm_network_security_group.this",
            "module.hub.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.hub",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d7cd510e-662c-4036-bafc-97fb14afba7b",
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/virtualNetworks/HUB",
            "location": "westeurope",
            "name": "HUB",
            "resource_group_name": "WAN-HUB-and-SPOKE",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/virtualNetworks/HUB/subnets/subnet1",
                "name": "subnet1",
                "security_group": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkSecurityGroups/hub-nsg"
              }
            ],
            "tags": {
              "ManagedBy": "Terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.hub.azurerm_network_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.nva_windows_vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkInterfaces/NVA-Windows-VM-nic",
            "ip_configuration": [
              {
                "name": "NVA-Windows-VM-nic0",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/virtualNetworks/HUB/subnets/subnet1"
              }
            ],
            "location": "westeurope",
            "mac_address": "60-45-BD-8C-02-DC",
            "name": "NVA-Windows-VM-nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "WAN-HUB-and-SPOKE",
            "tags": {
              "ManagedBy": "Terraform"
            },
            "virtual_machine_id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Compute/virtualMachines/NVA-Windows-VM"
          },
          "dependencies": [
            "azurerm_public_ip.lb",
            "azurerm_resource_group.main",
            "module.hub.azurerm_network_security_group.this",
            "module.hub.azurerm_network_security_rule.icmp_rule",
            "module.hub.azurerm_network_security_rule.rdp_rule",
            "module.hub.azurerm_network_security_rule.ssh_rule",
            "module.hub.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.route-table-spoke_1",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/routeTables/route-table-spoke1",
            "location": "westeurope",
            "name": "route-table-spoke1",
            "resource_group_name": "WAN-HUB-and-SPOKE",
            "route": [
              {
                "address_prefix": "10.2.0.0/16",
                "name": "route1",
                "next_hop_in_ip_address": "10.0.0.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/virtualNetworks/SPOKE_1/subnets/subnet1"
            ],
            "tags": {
              "ManagedBy": "Terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main",
            "module.spoke_2.azurerm_network_security_group.this",
            "module.spoke_2.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.route-table-spoke_1",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/virtualNetworks/SPOKE_1/subnets/subnet1",
            "route_table_id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/routeTables/route-table-spoke1",
            "subnet_id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/virtualNetworks/SPOKE_1/subnets/subnet1"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.route-table-spoke_1.azurerm_route_table.this",
            "module.spoke_1.azurerm_network_security_group.this",
            "module.spoke_1.azurerm_virtual_network.this",
            "module.spoke_2.azurerm_network_security_group.this",
            "module.spoke_2.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.route-table-spoke_2",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/routeTables/route-table-spoke2",
            "location": "westeurope",
            "name": "route-table-spoke2",
            "resource_group_name": "WAN-HUB-and-SPOKE",
            "route": [
              {
                "address_prefix": "10.1.0.0/16",
                "name": "route1",
                "next_hop_in_ip_address": "10.0.0.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/virtualNetworks/SPOKE_2/subnets/subnet1"
            ],
            "tags": {
              "ManagedBy": "Terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main",
            "module.spoke_1.azurerm_network_security_group.this",
            "module.spoke_1.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.route-table-spoke_2",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/virtualNetworks/SPOKE_2/subnets/subnet1",
            "route_table_id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/routeTables/route-table-spoke2",
            "subnet_id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/virtualNetworks/SPOKE_2/subnets/subnet1"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.route-table-spoke_2.azurerm_route_table.this",
            "module.spoke_1.azurerm_network_security_group.this",
            "module.spoke_1.azurerm_virtual_network.this",
            "module.spoke_2.azurerm_network_security_group.this",
            "module.spoke_2.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_1",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkSecurityGroups/spoke_1-nsg",
            "location": "westeurope",
            "name": "spoke_1-nsg",
            "resource_group_name": "WAN-HUB-and-SPOKE",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowICMP",
                "priority": 120,
                "protocol": "Icmp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "165.225.194.94",
                  "89.23.224.8"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "89.23.224.8",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_1",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "icmp_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkSecurityGroups/spoke_1-nsg/securityRules/AllowICMP",
            "name": "AllowICMP",
            "network_security_group_name": "spoke_1-nsg",
            "priority": 120,
            "protocol": "Icmp",
            "resource_group_name": "WAN-HUB-and-SPOKE",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main",
            "module.spoke_1.azurerm_network_security_group.this",
            "module.spoke_1.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_1",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rdp_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkSecurityGroups/spoke_1-nsg/securityRules/AllowRDP",
            "name": "AllowRDP",
            "network_security_group_name": "spoke_1-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "WAN-HUB-and-SPOKE",
            "source_address_prefix": "89.23.224.8",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main",
            "module.spoke_1.azurerm_network_security_group.this",
            "module.spoke_1.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_1",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkSecurityGroups/spoke_1-nsg/securityRules/AllowSSH",
            "name": "AllowSSH",
            "network_security_group_name": "spoke_1-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "WAN-HUB-and-SPOKE",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "165.225.194.94",
              "89.23.224.8"
            ],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main",
            "module.spoke_1.azurerm_network_security_group.this",
            "module.spoke_1.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_1",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "9520045a-3c06-466c-a97f-ceda1bec8cc2",
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/virtualNetworks/SPOKE_1",
            "location": "westeurope",
            "name": "SPOKE_1",
            "resource_group_name": "WAN-HUB-and-SPOKE",
            "subnet": [
              {
                "address_prefix": "10.1.0.0/24",
                "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/virtualNetworks/SPOKE_1/subnets/subnet1",
                "name": "subnet1",
                "security_group": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkSecurityGroups/spoke_1-nsg"
              }
            ],
            "tags": {
              "ManagedBy": "Terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.spoke_1.azurerm_network_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_2",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkSecurityGroups/spoke_2-nsg",
            "location": "westeurope",
            "name": "spoke_2-nsg",
            "resource_group_name": "WAN-HUB-and-SPOKE",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowICMP",
                "priority": 120,
                "protocol": "Icmp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "165.225.194.94",
                  "89.23.224.8"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "89.23.224.8",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_2",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "icmp_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkSecurityGroups/spoke_2-nsg/securityRules/AllowICMP",
            "name": "AllowICMP",
            "network_security_group_name": "spoke_2-nsg",
            "priority": 120,
            "protocol": "Icmp",
            "resource_group_name": "WAN-HUB-and-SPOKE",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main",
            "module.spoke_2.azurerm_network_security_group.this",
            "module.spoke_2.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_2",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rdp_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkSecurityGroups/spoke_2-nsg/securityRules/AllowRDP",
            "name": "AllowRDP",
            "network_security_group_name": "spoke_2-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "WAN-HUB-and-SPOKE",
            "source_address_prefix": "89.23.224.8",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main",
            "module.spoke_2.azurerm_network_security_group.this",
            "module.spoke_2.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_2",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkSecurityGroups/spoke_2-nsg/securityRules/AllowSSH",
            "name": "AllowSSH",
            "network_security_group_name": "spoke_2-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "WAN-HUB-and-SPOKE",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "165.225.194.94",
              "89.23.224.8"
            ],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main",
            "module.spoke_2.azurerm_network_security_group.this",
            "module.spoke_2.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_2",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f6111c5c-ed29-4a9c-b367-1fc6c12da89f",
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/virtualNetworks/SPOKE_2",
            "location": "westeurope",
            "name": "SPOKE_2",
            "resource_group_name": "WAN-HUB-and-SPOKE",
            "subnet": [
              {
                "address_prefix": "10.2.0.0/24",
                "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/virtualNetworks/SPOKE_2/subnets/subnet1",
                "name": "subnet1",
                "security_group": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkSecurityGroups/spoke_2-nsg"
              }
            ],
            "tags": {
              "ManagedBy": "Terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.spoke_2.azurerm_network_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.vulnerable_windows_vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/networkInterfaces/Vuln-Win2008-VM-nic",
            "ip_configuration": [
              {
                "name": "Vuln-Win2008-VM-nic0",
                "primary": true,
                "private_ip_address": "10.1.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Network/virtualNetworks/SPOKE_1/subnets/subnet1"
              }
            ],
            "location": "westeurope",
            "mac_address": "60-45-BD-99-08-78",
            "name": "Vuln-Win2008-VM-nic",
            "private_ip_address": "10.1.0.4",
            "private_ip_addresses": [
              "10.1.0.4"
            ],
            "resource_group_name": "WAN-HUB-and-SPOKE",
            "tags": {
              "ManagedBy": "Terraform"
            },
            "virtual_machine_id": "/subscriptions/6162102d-ca97-4f6f-823b-3901a6f74733/resourceGroups/WAN-HUB-and-SPOKE/providers/Microsoft.Compute/virtualMachines/Vuln-Win2008-VM"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.spoke_1.azurerm_network_security_group.this",
            "module.spoke_1.azurerm_network_security_rule.icmp_rule",
            "module.spoke_1.azurerm_network_security_rule.rdp_rule",
            "module.spoke_1.azurerm_network_security_rule.ssh_rule",
            "module.spoke_1.azurerm_virtual_network.this"
          ]
        }
      ]
    }
  ]
}